// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-framework normalization > should parse commander fixture help output 1`] = `
{
  "arguments": [
    "[options]",
    "[command]",
  ],
  "commandName": "test-cli",
  "commands": [
    {
      "aliases": undefined,
      "arguments": [
        "<name>",
      ],
      "commandName": "greet",
      "defaultValue": undefined,
      "description": "Greet someone by name",
      "flags": undefined,
    },
    {
      "aliases": undefined,
      "arguments": [
        "[port]",
      ],
      "commandName": "serve",
      "defaultValue": undefined,
      "description": "Start a server",
      "flags": undefined,
    },
    {
      "aliases": undefined,
      "arguments": [
        "[command]",
      ],
      "commandName": "help",
      "defaultValue": undefined,
      "description": "display help for command",
      "flags": undefined,
    },
  ],
  "description": "A test CLI for normalization verification.",
  "options": [
    {
      "aliases": [
        "-V",
      ],
      "arguments": undefined,
      "commandName": undefined,
      "defaultValue": undefined,
      "description": "output the version number",
      "flags": [
        "--version",
      ],
    },
    {
      "aliases": [
        "-n",
      ],
      "arguments": [
        "<value>",
      ],
      "commandName": undefined,
      "defaultValue": "world",
      "description": "Name to greet",
      "flags": [
        "--name",
      ],
    },
    {
      "aliases": undefined,
      "arguments": undefined,
      "commandName": undefined,
      "defaultValue": undefined,
      "description": "Enable verbose output",
      "flags": [
        "--verbose",
      ],
    },
    {
      "aliases": [
        "-h",
      ],
      "arguments": undefined,
      "commandName": undefined,
      "defaultValue": undefined,
      "description": "display help for command",
      "flags": [
        "--help",
      ],
    },
  ],
  "subcommandName": undefined,
}
`;

exports[`cross-framework normalization > should parse meow fixture help output 1`] = `
{
  "arguments": [
    "[options]",
  ],
  "commandName": "test-cli",
  "description": "A test CLI for normalization verification.",
  "options": [
    {
      "aliases": [
        "-n",
      ],
      "arguments": [
        "<value>",
      ],
      "description": "Name to greet",
      "flags": [
        "--name",
      ],
    },
    {
      "aliases": undefined,
      "arguments": undefined,
      "description": "Enable verbose output",
      "flags": [
        "--verbose",
      ],
    },
    {
      "aliases": [
        "-h",
      ],
      "arguments": undefined,
      "description": "Show help",
      "flags": [
        "--help",
      ],
    },
    {
      "aliases": [
        "-v",
      ],
      "arguments": undefined,
      "description": "Show version",
      "flags": [
        "--version",
      ],
    },
  ],
  "subcommandName": undefined,
}
`;

exports[`cross-framework normalization > should parse yargs fixture help output 1`] = `
{
  "arguments": [
    "[options]",
    "[command]",
  ],
  "commandName": "test-cli",
  "commands": [
    {
      "aliases": undefined,
      "arguments": [
        "<name>",
      ],
      "choices": undefined,
      "commandName": "greet",
      "default": undefined,
      "defaultValue": undefined,
      "description": "Greet someone by name",
      "flags": undefined,
      "parentCommandName": "test-cli",
      "required": undefined,
      "type": undefined,
    },
    {
      "aliases": undefined,
      "arguments": [
        "[port]",
      ],
      "choices": undefined,
      "commandName": "serve",
      "default": undefined,
      "defaultValue": undefined,
      "description": "Start a server",
      "flags": undefined,
      "parentCommandName": "test-cli",
      "required": undefined,
      "type": undefined,
    },
  ],
  "description": "A test CLI for normalization verification.",
  "options": [
    {
      "aliases": undefined,
      "arguments": undefined,
      "choices": undefined,
      "commandName": undefined,
      "default": undefined,
      "defaultValue": undefined,
      "description": "Show version number",
      "flags": [
        "--version",
      ],
      "parentCommandName": undefined,
      "required": undefined,
      "type": "boolean",
    },
    {
      "aliases": [
        "-n",
      ],
      "arguments": undefined,
      "choices": undefined,
      "commandName": undefined,
      "default": undefined,
      "defaultValue": ""world"",
      "description": "Name to greet",
      "flags": [
        "--name",
      ],
      "parentCommandName": undefined,
      "required": undefined,
      "type": "string",
    },
    {
      "aliases": undefined,
      "arguments": undefined,
      "choices": undefined,
      "commandName": undefined,
      "default": undefined,
      "defaultValue": undefined,
      "description": "Enable verbose output",
      "flags": [
        "--verbose",
      ],
      "parentCommandName": undefined,
      "required": undefined,
      "type": "boolean",
    },
    {
      "aliases": undefined,
      "arguments": undefined,
      "choices": undefined,
      "commandName": undefined,
      "default": undefined,
      "defaultValue": undefined,
      "description": "Show help",
      "flags": [
        "--help",
      ],
      "parentCommandName": undefined,
      "required": undefined,
      "type": "boolean",
    },
  ],
  "positionals": undefined,
  "subcommandName": undefined,
}
`;
